{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "7d2e7f40-6694-47f6-89cf-6d81662b7c88",
            "actions": [
                {
                    "name": "UpBinding",
                    "type": "Button",
                    "id": "51f053db-d75a-45fd-ac27-559ad9b4c668",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightBinding",
                    "type": "Button",
                    "id": "fcf17ad8-f425-4f09-8d50-c26c362bc4e8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftBinding",
                    "type": "Button",
                    "id": "f5cea7e1-e42d-41b2-b0cc-a8b64612b62f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "c6d41118-c471-4309-ae14-970c8f247cf3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "cfd652d2-ed66-475b-acbc-624f1cc6f6d2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fa1c8eb1-47f0-4eb7-96d6-564d0f7f6792",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpBinding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "415dd596-862b-4bbc-9c08-a42d99a58364",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpBinding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e16715e-c967-4eed-bbff-f69bf47b2696",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightBinding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5482145d-a40f-4ed1-a397-75545d72c0ed",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightBinding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8c77188-0291-4906-8497-88c987404867",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftBinding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "892db878-2af1-4984-b02e-a605bf1e7419",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftBinding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72e156fd-0dc9-4c1d-a718-b3d90db43d59",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7aec6262-ed3d-4229-a804-a13f95a39c7a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56d3abc4-406f-4e30-bfe5-6c04f4ff72f1",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}